# AutoRA-experiment-server

./: .gitignore  CONTRIBUTOR.md  Dockerfile  README.md  build_web_ui.py  copier.yml  docker_start.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yaml  pypi.yaml  standard.yaml
docs/: actions.md  actions_yaml.md  copier.md  docker.md  dockerfile.md  questionnaire.md
experiment/: .eslintrc.cjs  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
experiment/components/: alert.html  consent.html
experiment/components/end/: end.html  end.js
experiment/components/error/: error.html  error.js
experiment/components/wait/: wait.html  wait.js
nivturk-vite/: package.json
server/: autora_workflow.py  experiment.py  requirements.txt  webserver.py
template/: .gitignore  Dockerfile  README.md  _start_docker_server.sh  _start_metal_server.sh  start.sh
template/.github/workflows/: deploy.yaml
template/__hooks/: __postprocess.py.jinja
template/docs/: dockerfile.md
template/experiment/: .env  .eslintrc.cjs  README.md  autora-filestore-functions.js  index.html.jinja  index.js  package.json  package.json.jinja  pages.js  vite.config.js  {% if not firebase %}autora-filestore-functions.js{% endif %}  {% if project_type == 'Blank' %}main.js{% endif %}  {% if project_type == 'JsPsych - RDK' %}main.js{% endif %}  {% if project_type == 'JsPsych - Stroop' %}main.js{% endif %}
template/experiment-server/: webserver.py
template/experiment-ui/: index.js.jinja  package-lock.json  package.json.jinja  pages.js  {% if firebase %}firebase.js{% endif %}  {% if not firebase %}autora-filestore-functions.js{% endif %}  {% if project_type == 'Basic' %}main.js{% endif %}  {% if project_type == 'Blank' %}main.js{% endif %}  {% if project_type == 'JsPsych - Stroop' %}main.js{% endif %}  {% if project_type == 'SuperExperiment' %}main.js{% endif %}
template/experiment/components/: error.html
template/experiment/research_hub/: requirements.txt
template/server/: webserver.py
tests/: conftest.py  test_generation.py
webserver/: requirements.txt
