[project]
name="autora-experiment-web-server"
description = "AutoRA Web Experiment Template Project"
readme = {file = "README.md", content-type = "text/markdown"}
version = "2024.07"
license = {text = "MIT License"}
authors = [{name="Varun Narayan", email="varun.narayan@gatech.edu"}, 
{name="Katarzyna Rachwal", email="krachwal3@gatech.edu"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "autora",
    "autora-core"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-webserver = "setuptools.build_meta"

[project.urls]
"GitHub" = "https://github.com/AutoResearch"
"PyPI" = "https://pypi.org/project/autora/"

[tool.setuptools]
#packages = ["webserver"]
#package-dir = {"" = "webserver"}
include-package-data = true

[tool.setuptools.package-data]
#"webserver" = ["./dist/*"]

[project.scripts]
start = "webserver:run"